Continued with logging workouts and added exercises screen

--- a/gainz-workout/app.json
+++ b/gainz-workout/app.json
@@ -19,7 +19,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.ronleon.gainzworkout"
     },
     "web": {
       "bundler": "metro",
@@ -31,6 +32,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "7beaaf1e-fb4e-4b22-ba35-f3e17c431365"
+      }
     }
   }
 }
