--- a/gainz-workout/package.json
+++ b/gainz-workout/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^6.0.2",
+    "csv-parse": "^5.5.6",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
@@ -33,6 +34,7 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-csv": "^0.2.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
