--- a/gainz-workout/package.json
+++ b/gainz-workout/package.json
@@ -37,6 +37,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-csv": "^0.2.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.5",
     "react-native-picker": "^4.3.7",
@@ -51,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.10",
     "@types/papaparse": "^5.3.14",
     "@types/react": "~18.2.45",
     "@types/react-native-vector-icons": "^6.4.18",
