--- a/gainz-workout/package.json
+++ b/gainz-workout/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-picker/picker": "^2.8.1",
     "@react-navigation/native": "^6.0.2",
     "csv-parse": "^5.5.6",
