--- a/gainz-workout/package.json
+++ b/gainz-workout/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.0.2",
     "csv-parse": "^5.5.6",
     "expo": "~51.0.28",
+    "expo-checkbox": "^3.0.0",
     "expo-constants": "~16.0.2",
     "expo-document-picker": "~12.0.2",
     "expo-font": "~12.0.9",
